# drxplayer

./: .env.sample  Cargo.toml  drxcarent.service  drxplayer.service
car-ent/: package-lock.json  package.json  rollup.config.js
car-ent/public/: index.html
car-ent/src/: App.svelte  Dummy.svelte  main.js
car-ent/src/apis/: http.js
car-ent/src/pages/: MusicPlayer.svelte  Settings.svelte
frontend/: package.json  vue.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: Obd2Csv.vue  Player.vue  VideoPlayer.vue
public/: index.html
public/fe/: app_main.js  app_main.js.map  index.html
public/fe/css/: app.css
public/fe/js/: chunk-vendors.js  chunk-vendors.js.map
src/: cors.rs  main.rs
src/handlers/: mod.rs  music_handler.rs  setting_handler.rs  video_handler.rs
